<resources>
    <string name="app_name">projectakhir</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="btnregis">Belum terdaftar?</string>
    <string name="btnbelibrangus">Beli Sekarang</string>
    <string name="btnbatalbrangus">Batal</string>
    <string name="btnbelisimental">Beli Sekarang</string>
    <string name="btnbatalsimental">Batal</string>
    <string name="btnbelibrahman">Beli Sekarang</string>
    <string name="btnbatalbrahman">Batal</string>
    <string name="btnbelilimousin">Beli Sekarang</string>
    <string name="btnbatallimousin">Batal</string>
    <string name="rname">Masukkan Nama</string>
    <string name="ralamat">Masukkan Alamat</string>
    <string name="remail">Masukkan Email</string>
    <string name="rpassword">Masukkan Password</string>
    <string name="rrepassword">Masukkan Repassword</string>
</resources>